# kzrk

./: .gitignore  API.md  CLAUDE.md  Cargo.toml  GAME_DESIGN.md  GAME_UPDATE.md  Makefile  README.md  clippy.toml  deny.toml  kzrk_multiplayer.db  rustfmt.toml
.github/workflows/: ci.yml
benches/: game_benchmarks.rs
src/: config.rs  lib.rs  main.rs
src/api/: database.rs  handlers.rs  mod.rs  models.rs  multiplayer_handlers.rs  multiplayer_service.rs  routes.rs  service.rs  stateless_handlers.rs
src/data/: airports.rs  cargo_types.rs  mod.rs
src/models/: airport.rs  cargo.rs  market.rs  message_board.rs  mod.rs  player.rs  stats.rs
src/systems/: events.rs  game.rs  market.rs  mod.rs  multiplayer.rs  save.rs  trading.rs  travel.rs
src/ui/: egui_app.rs  game_api_client.rs  mod.rs  terminal.rs
src/ui/scenes/: airport.rs  mod.rs  room_lobby.rs  server_connection.rs
tests/: api_integration_tests.rs  database_tests.rs  error_scenario_tests.rs  game_integration_tests.rs  gui_api_client_tests.rs  message_board_tests.rs  multiplayer_persistence_tests.rs  performance_tests.rs  property_tests.rs  room_lifecycle_tests.rs  save_system_tests.rs
