[package]
name = "kzrk"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A trading simulation game built in Rust"
authors = ["Claude AI Assistant <noreply@anthropic.com>"]
repository = "https://github.com/user/kzrk"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
eframe = { version = "0.29", optional = true }
egui_extras = { version = "0.29", features = ["image"], optional = true }

[features]
default = ["terminal"]
gui = ["dep:eframe", "dep:egui_extras"]
terminal = []

[dev-dependencies]
assert_matches = "1.5"
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports"] }
wiremock = "0.5"
rstest = "0.18"
proptest = "1.0"
tokio-test = "0.4"

[[bench]]
name = "game_benchmarks"
harness = false
